# tremblecode

./: .env.example  .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
sandbox/runtime/: pyproject.toml
sandbox/runtime/src/tremblecode_runtime/: config.py  hook.py
sandbox/runtime/src/tremblecode_runtime/mcp_server/: server.py
sandbox/runtime/src/tremblecode_runtime/relay/: __main__.py  app.py  consumers.py  sessions.py  state.py  tmux.py  transcripts.py
sandbox/runtime/tests/: conftest.py  test_consumers.py
server/: pyproject.toml
server/src/tremblecode_server/: config.py  database.py  main.py
server/src/tremblecode_server/api/: agent_templates.py  agents.py  deps.py  discussions.py  escalations.py  internal.py  mcp.py  messages.py  plans.py  projects.py  settings.py  wiki.py  ws.py
server/src/tremblecode_server/models/: __init__.py  base.py  comms.py  discussion.py  plan.py  project.py  roster.py  runtime.py  task.py
server/src/tremblecode_server/schemas/: core.py  plan.py
server/src/tremblecode_server/services/: agent_service.py  bus.py  cost_service.py  discussion_service.py  docker_service.py  escalation_service.py  git_service.py  lifecycle.py  mcp_catalog.py  message_service.py  plan_service.py  provisioner.py  secrets.py  seed.py  settings_store.py  task_service.py  terminal_bridge.py  watchdog.py
server/src/tremblecode_server/ws/: manager.py
server/tests/: conftest.py  test_add_agent.py  test_core_api.py  test_costs_mcp_wiki.py  test_health.py  test_provisioner.py  test_workflow.py
(+66 files in other folders)
