[project]
name = "tremblecode-server"
version = "2.0.0"
description = "TrembleCode orchestration server"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "docker>=7.1.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "python-slugify>=8.0.4",
    "cryptography>=43.0.0",
    "pyyaml>=6.0.2",
    "websockets>=14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "anyio>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tremblecode_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
