[project]
name = "tremblecode-runtime"
version = "2.0.0"
description = "TrembleCode in-container runtime: relay, MCP server, hook bridge"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "redis>=5.2",
    "httpx>=0.28",
    "pyyaml>=6",
    "mcp>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tremblecode_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
